# Soverign-Founder-OS

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MANIFESTO.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  TRADEMARK.md  VISION.md
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/assets/: app.js  i18n.js  index.html  styles.css  tsconfig.json  ui.html
apps/cli/src/: demo.rs  main.rs  ui.rs  workspace.rs
apps/cli/src/workspace/: compose.rs  kernel_exec.rs  mod.rs  ops.rs  reporting.rs  send_workflow.rs  stage1_suite.rs  store.rs  tests.rs  types.rs  util.rs  verify.rs
crates/artifact/: Cargo.toml
crates/artifact/src/: admission.rs  digest.rs  error.rs  invocation.rs  lib.rs  manifest.rs  schema.rs  selector.rs
crates/artifact/tests/: admission_store.rs  artifact_admission.rs
crates/audit-ledger/: Cargo.toml
crates/audit-ledger/src/: lib.rs
crates/authority/: Cargo.toml
crates/authority/src/: lib.rs
crates/capability/: Cargo.toml
crates/capability/src/: approval.rs  lib.rs  v2.rs
crates/capability/tests/: approval_v2.rs  capability_v2.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: device.rs  fs.rs  lib.rs  roles.rs  signer.rs  tests.rs  trust.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: compile_worker.rs  compiled_cache.rs  lib.rs  wasm.rs
crates/sandbox/tests/: verified_v2.rs  wasm_isolation.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
docs/: INDEX.md  LANGUAGE.md  why-not-another-agent.md
docs/archive/zh/: 01-AI-Founder-OS-初步设想.md  02-Sovereign-Founder-OS-主权升级.md  03-开源项目企划书-v0.1.md  README.md
docs/design/: distributed-systems.md  privacy-model.md
docs/positioning/: why-not-another-agent.md
docs/product/: gui-design.zh-CN.md
docs/zh/: 01-AI-Founder-OS-初步设想.md  02-Sovereign-Founder-OS-主权升级.md  03-开源项目企划书-v0.1.md  04-GUI设计.md  README.md
rfcs/: 0002-wasm-sandbox-and-plugin-capabilities.md  0003-signed-approval-evidence.md
scripts/: check-file-size.sh
tests/adversarial/: Cargo.toml
tests/adversarial/src/: lib.rs
tests/adversarial/tests/: security_invariants.rs
