[workspace]
resolver = "2"
members = [
    "crates/authority",
    "crates/contracts",
    "crates/identity",
    "crates/artifact",
    "crates/audit-ledger",
    "crates/policy",
    "crates/capability",
    "crates/vault",
    "crates/sandbox",
    "apps/cli",
    "tests/adversarial",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/IcantFind-a-username/Sovereign-Founder-OS"

[workspace.dependencies]
sovereign-authority = { path = "crates/authority" }
sovereign-contracts = { path = "crates/contracts" }
sovereign-identity = { path = "crates/identity" }
sovereign-artifact = { path = "crates/artifact" }
sovereign-audit-ledger = { path = "crates/audit-ledger" }
sovereign-policy = { path = "crates/policy" }
sovereign-capability = { path = "crates/capability" }
sovereign-vault = { path = "crates/vault" }
sovereign-sandbox = { path = "crates/sandbox" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
dirs = "5"
clap = { version = "4", features = ["derive"] }
wasmtime = { version = "=46.0.1", default-features = false, features = ["cranelift", "runtime", "std"] }
coset = "=0.4.2"
serde_json_canonicalizer = "=0.3.2"

[profile.release]
lto = true
codegen-units = 1
