[package]
name = "sovereign-capability"
description = "Capability token issuer and validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sovereign-contracts = { workspace = true }
sovereign-identity = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sovereign-policy = { workspace = true }
