[package]
name = "sovereign-capability"
description = "Capability token issuer and validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sovereign-contracts = { workspace = true }
sovereign-identity = { workspace = true }
sovereign-artifact = { workspace = true }
sovereign-policy = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde_json_canonicalizer = { workspace = true }
