[package]
name = "sovereign-identity"
description = "Device identity and signing for Sovereign Agent Runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
