[package]
name = "sovereign-policy"
description = "Deterministic policy engine for Sovereign Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sovereign-contracts = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
