[package]
name = "sovereign-sandbox"
description = "Sandboxed tool execution for Sovereign Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sovereign-capability = { workspace = true }
sovereign-contracts = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sovereign-policy = { workspace = true }
uuid = { workspace = true }
