[package]
name = "sovereign-sandbox"
description = "Sandboxed tool execution for Sovereign Runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sovereign-artifact = { workspace = true }
sovereign-capability = { workspace = true }
sovereign-contracts = { workspace = true }
sovereign-execution = { workspace = true }
sovereign-identity = { workspace = true }
sovereign-policy = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wat = "1"
tempfile = "3"
