[package]
name = "sovereign-workflow"
description = "Durable, resumable workflow checkpoints with idempotent step replay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile = "3"
